fix stretch cards on desktop view

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -72,13 +72,38 @@ body {
 }
 
 @media screen and (min-width: 700px) {
-  .Todolist main {
+  .Todolist {
     display: flex;
     flex-direction: row;
     width: 100%;
     justify-content: center;
-    section {
+    flex-wrap: wrap;
+    .cards {
       width: 50%;
+      .cards-list {
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: stretch;
+        .card-item-green, .card-item-orange, .card-item-red {
+          width: 45%;
+          height: auto;
+          .card-item-logo {
+            font-size: 2rem;
+          }
+          .card-item-status {
+            font-size: 4rem;
+          }
+          h3 {
+            font-size: 2rem;
+          }
+        }
+      }
+      &:first-of-type {
+        border-bottom: none;
+        padding-bottom: 0;
+        margin-bottom: 0;
+      }
     }
   }
 
